# chop-tran-video-demo

./: README.md
binance-rs/: .gitignore  Cargo.toml  README.md  limit-order.toml  market-order.toml
binance-rs/config/: dev.toml
binance-rs/src/: app_config.rs  lib.rs  main.rs
binance-rs/src/application/: command.rs
binance-rs/src/domain/: binance.rs
binance-rs/src/infrastructure/: binance_repo.rs  config_facade.rs  mod.rs  reqwest_facade.rs
concurrent-mining/: Cargo.toml  sample_block.yaml
concurrent-mining/examples/: hash_0.rs  hash_1.rs  sample_0.rs  sample_1.rs  sample_2.rs
concurrent-mining/src/: lib.rs
